# clawkit

./: .gitignore  BENCHMARK.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  SKILL.md  auth.py  clawkit.py  pyproject.toml  pytest.ini  sign_engine.py
.github/workflows/: test.yml
clawkit/: __init__.py  _legacy.py  analyzer.py  auth.py  cli.py  http.py  models.py  ocr.py  sign_engine.py
clawkit/extractors/: __init__.py  base.py  bilibili.py  douyin.py  goofish.py  kuaishou.py  twitter.py  weibo.py  xiaohongshu.py  youtube.py  zhihu.py
examples/: batch_extract.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_auth.py  test_bilibili.py  test_douyin.py  test_goofish.py  test_infrastructure.py  test_kuaishou.py  test_ocr.py  test_sign_engine.py  test_twitter.py  test_weibo.py  test_xiaohongshu.py  test_youtube.py  test_zhihu.py
tests/fixtures/: bilibili_result.json  bilibili_trending.json  douyin_result.json  weibo_trending.json  xhs_result.json
